Implementar todos os requisitos técnicos: JavaScript, API REST, testes automatizados e análise de dados

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
     </footer>
     {% endblock %}
 
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
