--- a/templates/gestao/base.html
+++ b/templates/gestao/base.html
@@ -15,11 +15,11 @@
             </a>
             <ul class="gestao-menu">
                 <li><a href="{{ url_for('dashboard') }}" {% if request.endpoint == 'dashboard' %}class="active"{% endif %}>Dashboard</a></li>
-                <li><a href="{{ url_for('listar_entregas') }}" {% if request.endpoint == 'listar_entregas' %}class="active"{% endif %}>Entregas</a></li>
-                <li><a href="{{ url_for('nova_entrega') }}" {% if request.endpoint == 'nova_entrega' %}class="active"{% endif %}>Nova Entrega</a></li>
-                <li><a href="{{ url_for('relatorios') }}" {% if request.endpoint == 'relatorios' %}class="active"{% endif %}>Relatórios</a></li>
+                <li><a href="/gestao/entregas" {% if request.endpoint == 'listar_entregas' %}class="active"{% endif %}>Entregas</a></li>
+                <li><a href="/gestao/nova-entrega" {% if request.endpoint == 'nova_entrega' %}class="active"{% endif %}>Nova Entrega</a></li>
+                <li><a href="/gestao/relatorios" {% if request.endpoint == 'relatorios' %}class="active"{% endif %}>Relatórios</a></li>
                 <li><a href="/gestao/analytics" {% if request.endpoint == 'analytics' %}class="active"{% endif %}>Análise de Dados</a></li>
-                <li><a href="{{ url_for('logout') }}">Sair ({{ session.username }})</a></li>
+                <li><a href="/gestao/logout">Sair ({{ session.username }})</a></li>
             </ul>
         </nav>
     </header>
